GArrays' data is properly aligned for whatever they are holding (despite the fact that 'data' is a pointer to a char).  GLIB fixed this in their accessor macro here:

http://svn.gnome.org/viewvc/glib?view=revision&revision=6092

The bug report confirms that the data is properly aligned:

http://bugzilla.gnome.org/show_bug.cgi?id=502927

So, add some intermediate (void *) casts to avoid "cast increases required
alignment of target type" on SPARC.  (No, we can't use the accessor macro
because we want to access the whole array not just the ith element.)

Since build_dict->ett is actually an array of pointers, change it to a
GPtrArray.

Reindent some.

svn path=/trunk/; revision=25749